--- a/ViewControllers/DataUsage/DataUsageCell.xib
+++ b/ViewControllers/DataUsage/DataUsageCell.xib
@@ -39,7 +39,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="FuC-xL-bKZ">
                                         <rect key="frame" x="20" y="60" width="280" height="40"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Muhammed!," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="djn-iL-4DF" customClass="LabelSetting" customModule="EtisalatTravel" customModuleProvider="target">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Abdul!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="djn-iL-4DF" customClass="LabelSetting" customModule="EtisalatTravel" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="180" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="180" id="paF-VS-E7W"/>
