--- a/ViewControllers/Dashboard/DashboardCountryOpenCell.xib
+++ b/ViewControllers/Dashboard/DashboardCountryOpenCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -202,7 +202,7 @@
                                                             <constraint firstAttribute="height" constant="40" id="vKg-Cu-mDo"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" title="SUBSCRIBE">
+                                                        <buttonConfiguration key="configuration" style="plain" title="PURCHASE">
                                                             <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="12"/>
                                                             <color key="baseForegroundColor" red="0.2666666667" green="0.078431372550000003" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </buttonConfiguration>
@@ -355,7 +355,7 @@
                                                             <constraint firstAttribute="height" constant="40" id="XX3-aP-thZ"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" title="SUBSCRIBE">
+                                                        <buttonConfiguration key="configuration" style="plain" title="PURCHASE">
                                                             <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="12"/>
                                                             <color key="baseForegroundColor" red="0.2666666667" green="0.078431372550000003" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </buttonConfiguration>
@@ -507,7 +507,7 @@
                                                             <constraint firstAttribute="height" constant="40" id="xPI-Bj-rMV"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" title="SUBSCRIBE">
+                                                        <buttonConfiguration key="configuration" style="plain" title="PURCHASE">
                                                             <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="12"/>
                                                             <color key="baseForegroundColor" red="0.2666666667" green="0.078431372550000003" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </buttonConfiguration>
